2002-08-23  Martin Baulig  <martin@gnome.org>

	* struct.cs (MyStructInfo.ctor): Make this work with empty
	structs; it's not allowed to use foreach() on null.

2002-08-23  Martin Baulig  <martin@gnome.org>

	* codegen.cs (CodeGen.InitMonoSymbolWriter): Tell the symbol
	writer the full pathname of the generated assembly.

2002-08-23  Martin Baulig  <martin@gnome.org>

	* statements.cs (FlowBranching.UsageVector.MergeChildren):
	A `finally' block never returns or breaks; improved handling of
	unreachable code.

2002-08-23  Martin Baulig  <martin@gnome.org>

	* statement.cs (Throw.Resolve): Allow `throw null'.

2002-08-23  Martin Baulig  <martin@gnome.org>

	* expression.cs (MemberAccess.ResolveMemberAccess): If this is an
	EventExpr, don't do a DeclaredOnly MemberLookup, but check whether
	`ee.EventInfo.DeclaringType == ec.ContainerType'.  The
	MemberLookup would return a wrong event if this is an explicit
	interface implementation and the class has an event with the same
	name.

2002-08-23  Martin Baulig  <martin@gnome.org>

	* statement.cs (Block.AddChildVariableNames): New public method.
	(Block.AddChildVariableName): Likewise.
	(Block.IsVariableNameUsedInChildBlock): Likewise.
	(Block.AddVariable): Check whether a variable name has already
	been used in a child block.

	* cs-parser.jay (declare_local_variables): Mark all variable names
	from the current block as being used in a child block in the
	implicit block.

2002-08-23  Martin Baulig  <martin@gnome.org>

	* codegen.cs (CodeGen.InitializeSymbolWriter): Abort if we can't
	find the symbol writer.

	* driver.cs: csc also allows the arguments to /define being
	separated by commas, not only by semicolons.

2002-08-23  Martin Baulig  <martin@gnome.org>

	* interface.cs (Interface.GetMembers): Added static check for events.

2002-08-15  Martin Baulig  <martin@gnome.org>

	* class.cs (MethodData.EmitDestructor): In the Expression.MemberLookup
	call, use ec.ContainerType.BaseType as queried_type and invocation_type.