@@ -953,8 +953,12 @@ namespace Mono.CSharp {
 		{
 			MemberInfo [] members = type.GetMethods (bf);
 
-			foreach (MemberInfo member in members) {
+			foreach (MethodBase member in members) {
 				string name = member.Name;
+
+				// Varargs methods aren't allowed in C# code.
+				if ((member.CallingConvention & CallingConventions.VarArgs) != 0)
+					continue;
 
 				// We use a name-based hash table of ArrayList's.
 				ArrayList list = (ArrayList) method_hash [name];
